feat: add Stream API demo for List and Array sources